--- a/css/estilos.css
+++ b/css/estilos.css
@@ -183,11 +183,13 @@ img {
 @font-face { font-family: BlackJar; src: url('BLACKJAR.TTF'); } 
 .logo{
 	font-family: BlackJar;
+	color: #A28769;
 	padding: 0px;
 	font-size: 60px;
 	text-shadow: 1px 1px 1px grey ;
 }
 .sublogo{
+	padding: 0px;
 	font-size: 20px;
 	text-shadow: 1px 1px 1px grey ;
 }
